--- a/notebook/cleaning.ipynb
+++ b/notebook/cleaning.ipynb
@@ -2,28 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'model'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmodel\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mLogisticRegression\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LogisticRegression\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'model'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,194 +36,86 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>EbayID</th>\n",
-       "      <th>QuantitySold</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>PricePercent</th>\n",
-       "      <th>StartingBidPercent</th>\n",
        "      <th>SellerName</th>\n",
-       "      <th>SellerClosePercent</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>PersonID</th>\n",
-       "      <th>StartingBid</th>\n",
-       "      <th>...</th>\n",
-       "      <th>AuctionSaleCount</th>\n",
        "      <th>SellerAuctionCount</th>\n",
        "      <th>SellerAuctionSaleCount</th>\n",
        "      <th>AuctionMedianPrice</th>\n",
        "      <th>ReturnsCount</th>\n",
-       "      <th>AuctionSaleRatio</th>\n",
-       "      <th>MedianPriceDeviation</th>\n",
-       "      <th>ReturnRate</th>\n",
-       "      <th>HighReturnRate</th>\n",
        "      <th>is_fraud</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.609830e+11</td>\n",
-       "      <td>1</td>\n",
-       "      <td>27.25</td>\n",
-       "      <td>1.4787</td>\n",
-       "      <td>0.0537</td>\n",
-       "      <td>petesandi</td>\n",
-       "      <td>0.925926</td>\n",
-       "      <td>73396</td>\n",
-       "      <td>9174</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>...</td>\n",
-       "      <td>291</td>\n",
-       "      <td>54</td>\n",
-       "      <td>50</td>\n",
-       "      <td>12.26</td>\n",
-       "      <td>40</td>\n",
-       "      <td>0.925926</td>\n",
-       "      <td>2.76</td>\n",
-       "      <td>0.740741</td>\n",
+       "      <td>171004000000</td>\n",
+       "      <td>itsmittytime</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>74.490</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3.905500e+11</td>\n",
-       "      <td>1</td>\n",
-       "      <td>43.00</td>\n",
-       "      <td>1.4422</td>\n",
-       "      <td>0.3350</td>\n",
-       "      <td>graphn4fun</td>\n",
-       "      <td>0.990566</td>\n",
-       "      <td>27278</td>\n",
-       "      <td>11046</td>\n",
-       "      <td>9.99</td>\n",
-       "      <td>...</td>\n",
-       "      <td>43</td>\n",
-       "      <td>106</td>\n",
-       "      <td>105</td>\n",
-       "      <td>24.45</td>\n",
-       "      <td>51</td>\n",
-       "      <td>0.990566</td>\n",
-       "      <td>14.95</td>\n",
-       "      <td>0.481132</td>\n",
-       "      <td>0</td>\n",
+       "      <td>380618000000</td>\n",
+       "      <td>my09131970</td>\n",
+       "      <td>5028</td>\n",
+       "      <td>459</td>\n",
+       "      <td>0.990</td>\n",
+       "      <td>485</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2.009010e+11</td>\n",
+       "      <td>321109000000</td>\n",
+       "      <td>llbobo</td>\n",
+       "      <td>44</td>\n",
+       "      <td>16</td>\n",
+       "      <td>29.885</td>\n",
+       "      <td>27</td>\n",
        "      <td>1</td>\n",
-       "      <td>11.00</td>\n",
-       "      <td>0.5969</td>\n",
-       "      <td>0.5426</td>\n",
-       "      <td>hondo19461946</td>\n",
-       "      <td>0.422131</td>\n",
-       "      <td>73396</td>\n",
-       "      <td>9174</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>291</td>\n",
-       "      <td>244</td>\n",
-       "      <td>103</td>\n",
-       "      <td>12.26</td>\n",
-       "      <td>162</td>\n",
-       "      <td>0.422131</td>\n",
-       "      <td>2.76</td>\n",
-       "      <td>0.663934</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2.711630e+11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>0.5426</td>\n",
-       "      <td>0.5426</td>\n",
-       "      <td>winemeyer45</td>\n",
-       "      <td>0.245098</td>\n",
-       "      <td>73396</td>\n",
-       "      <td>9174</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>291</td>\n",
-       "      <td>102</td>\n",
-       "      <td>25</td>\n",
-       "      <td>12.26</td>\n",
-       "      <td>52</td>\n",
-       "      <td>0.245098</td>\n",
-       "      <td>2.76</td>\n",
-       "      <td>0.509804</td>\n",
-       "      <td>0</td>\n",
+       "      <td>380627000000</td>\n",
+       "      <td>my09131970</td>\n",
+       "      <td>5028</td>\n",
+       "      <td>459</td>\n",
+       "      <td>0.990</td>\n",
+       "      <td>694</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3.106120e+11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9.99</td>\n",
-       "      <td>1.9159</td>\n",
-       "      <td>1.9159</td>\n",
-       "      <td>chucksmemorabilia</td>\n",
-       "      <td>0.295359</td>\n",
-       "      <td>73396</td>\n",
-       "      <td>17956</td>\n",
-       "      <td>9.99</td>\n",
-       "      <td>...</td>\n",
-       "      <td>44</td>\n",
-       "      <td>237</td>\n",
-       "      <td>70</td>\n",
-       "      <td>3.02</td>\n",
-       "      <td>189</td>\n",
-       "      <td>0.295359</td>\n",
-       "      <td>6.48</td>\n",
-       "      <td>0.797468</td>\n",
-       "      <td>1</td>\n",
+       "      <td>181127000000</td>\n",
+       "      <td>hhsportz</td>\n",
+       "      <td>87</td>\n",
+       "      <td>19</td>\n",
+       "      <td>36.000</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         EbayID  QuantitySold  Price  PricePercent  StartingBidPercent  \\\n",
-       "0  1.609830e+11             1  27.25        1.4787              0.0537   \n",
-       "1  3.905500e+11             1  43.00        1.4422              0.3350   \n",
-       "2  2.009010e+11             1  11.00        0.5969              0.5426   \n",
-       "3  2.711630e+11             0  10.00        0.5426              0.5426   \n",
-       "4  3.106120e+11             0   9.99        1.9159              1.9159   \n",
+       "         EbayID    SellerName  SellerAuctionCount  SellerAuctionSaleCount  \\\n",
+       "0  171004000000  itsmittytime                   8                       5   \n",
+       "1  380618000000    my09131970                5028                     459   \n",
+       "2  321109000000        llbobo                  44                      16   \n",
+       "3  380627000000    my09131970                5028                     459   \n",
+       "4  181127000000      hhsportz                  87                      19   \n",
        "\n",
-       "          SellerName  SellerClosePercent  Category  PersonID  StartingBid  \\\n",
-       "0          petesandi            0.925926     73396      9174         0.99   \n",
-       "1         graphn4fun            0.990566     27278     11046         9.99   \n",
-       "2      hondo19461946            0.422131     73396      9174        10.00   \n",
-       "3        winemeyer45            0.245098     73396      9174        10.00   \n",
-       "4  chucksmemorabilia            0.295359     73396     17956         9.99   \n",
-       "\n",
-       "   ...  AuctionSaleCount  SellerAuctionCount  SellerAuctionSaleCount  \\\n",
-       "0  ...               291                  54                      50   \n",
-       "1  ...                43                 106                     105   \n",
-       "2  ...               291                 244                     103   \n",
-       "3  ...               291                 102                      25   \n",
-       "4  ...                44                 237                      70   \n",
-       "\n",
-       "   AuctionMedianPrice  ReturnsCount  AuctionSaleRatio  MedianPriceDeviation  \\\n",
-       "0               12.26            40          0.925926                  2.76   \n",
-       "1               24.45            51          0.990566                 14.95   \n",
-       "2               12.26           162          0.422131                  2.76   \n",
-       "3               12.26            52          0.245098                  2.76   \n",
-       "4                3.02           189          0.295359                  6.48   \n",
-       "\n",
-       "   ReturnRate  HighReturnRate  is_fraud  \n",
-       "0    0.740741               1         0  \n",
-       "1    0.481132               0         0  \n",
-       "2    0.663934               1         0  \n",
-       "3    0.509804               0         0  \n",
-       "4    0.797468               1         0  \n",
-       "\n",
-       "[5 rows x 34 columns]"
+       "   AuctionMedianPrice  ReturnsCount  is_fraud  \n",
+       "0              74.490             1         0  \n",
+       "1               0.990           485         0  \n",
+       "2              29.885            27         1  \n",
+       "3               0.990           694         0  \n",
+       "4              36.000             2         0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,27 +127,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0          50\n",
-       "1         105\n",
-       "2         103\n",
-       "3          25\n",
-       "4          70\n",
-       "         ... \n",
-       "258583    272\n",
-       "258584     20\n",
-       "258585     25\n",
-       "258586     59\n",
-       "258587    162\n",
-       "Name: SellerAuctionSaleCount, Length: 258588, dtype: int64"
+       "0          5\n",
+       "1        459\n",
+       "2         16\n",
+       "3        459\n",
+       "4         19\n",
+       "        ... \n",
+       "23990     74\n",
+       "23991     74\n",
+       "23992      1\n",
+       "23993     56\n",
+       "23994     66\n",
+       "Name: SellerAuctionSaleCount, Length: 23995, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,60 +172,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "258588\n",
-      "93911\n",
-      "164677\n",
-      "Index(['EbayID', 'QuantitySold', 'Price', 'PricePercent', 'StartingBidPercent',\n",
-      "       'SellerName', 'SellerClosePercent', 'Category', 'PersonID',\n",
-      "       'StartingBid', 'AvgPrice', 'EndDay', 'HitCount', 'AuctionAvgHitCount',\n",
-      "       'ItemAuctionSellPercent', 'SellerSaleAvgPriceRatio', 'SellerAvg',\n",
-      "       'SellerItemAvg', 'AuctionHitCountAvgRatio', 'BestOffer',\n",
-      "       'ReturnsAccepted', 'IsHOF', 'ItemListedCount', 'AuctionCount',\n",
-      "       'AuctionSaleCount', 'SellerAuctionCount', 'SellerAuctionSaleCount',\n",
-      "       'AuctionMedianPrice', 'ReturnsCount', 'AuctionSaleRatio',\n",
-      "       'MedianPriceDeviation', 'ReturnRate', 'HighReturnRate', 'is_fraud'],\n",
+      "23995\n",
+      "9068\n",
+      "14927\n",
+      "Index(['EbayID', 'SellerName', 'SellerAuctionCount', 'SellerAuctionSaleCount',\n",
+      "       'AuctionMedianPrice', 'ReturnsCount', 'is_fraud'],\n",
       "      dtype='object')\n",
-      "EbayID                     258588\n",
-      "QuantitySold               258588\n",
-      "Price                      258588\n",
-      "PricePercent               258588\n",
-      "StartingBidPercent         258588\n",
-      "SellerName                 258588\n",
-      "SellerClosePercent         258588\n",
-      "Category                   258588\n",
-      "PersonID                   258588\n",
-      "StartingBid                258588\n",
-      "AvgPrice                   258588\n",
-      "EndDay                     258588\n",
-      "HitCount                   258588\n",
-      "AuctionAvgHitCount         258588\n",
-      "ItemAuctionSellPercent     258588\n",
-      "SellerSaleAvgPriceRatio    258588\n",
-      "SellerAvg                  258588\n",
-      "SellerItemAvg              258588\n",
-      "AuctionHitCountAvgRatio    258588\n",
-      "BestOffer                  258588\n",
-      "ReturnsAccepted            258588\n",
-      "IsHOF                      258588\n",
-      "ItemListedCount            258588\n",
-      "AuctionCount               258588\n",
-      "AuctionSaleCount           258588\n",
-      "SellerAuctionCount         258588\n",
-      "SellerAuctionSaleCount     258588\n",
-      "AuctionMedianPrice         258588\n",
-      "ReturnsCount               258588\n",
-      "AuctionSaleRatio           258588\n",
-      "MedianPriceDeviation       258588\n",
-      "ReturnRate                 258588\n",
-      "HighReturnRate             258588\n",
-      "is_fraud                   258588\n",
+      "EbayID                    23995\n",
+      "SellerName                23995\n",
+      "SellerAuctionCount        23995\n",
+      "SellerAuctionSaleCount    23995\n",
+      "AuctionMedianPrice        23995\n",
+      "ReturnsCount              23995\n",
+      "is_fraud                  23995\n",
       "dtype: int64\n"
      ]
     }
@@ -361,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -372,23 +218,19 @@
      ]
     }
    ],
-   "source": [
-    "import sys\n",
-    "sys.path.append('/home/mangoo/college/7thsem/project/Fraud_detection_final_year_project/project/')  # Adjust to the base folder of your project\n",
-    "print(sys.path)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "155152\n",
-      "103436\n"
+      "14397\n",
+      "9598\n"
      ]
     }
    ],
